--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
 				<h2 class="musict">05 - Feeling Good</h2>
 				<audio controls src="music\05 - feeling good.mp3" type="audio/mpeg"></audio>
 			</div>
+			<div>
+				<a href="page2.html"> LOST IN THE SOUND</a>
+			</div>
 		</div>
 	</body>
 </Html>
