--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 				<audio controls src="music\04 - Nights in detroit.mp3" type="audio/mpeg"></audio>
 				<h2 class="musict">05 - Feeling Good</h2>
 				<audio controls src="music\05 - feeling good.mp3" type="audio/mpeg"></audio>
-				<a href="page2.html"> LOST IN THE SOUND</a>
+				<a href="https://heliohenriquehfilho.github.io/lost-in-the-sound/"> LOST IN THE SOUND</a>
 			</div>
 		</div>
 	</body>
