--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 				<audio controls src="music\01 - introduction.mp3" type="audio/mpeg" class="player"></audio>
 				<h2 class="musict">02 - Calming waves of the blue ocean</h2>
 				<audio controls src="music\02 - Calmin  waves of the blue ocean.mp3" type="audio/mpeg"></audio>
-				<h2 class="musict">03 - Transission</h2>
+				<h2 class="musict">03 - transition</h2>
 				<audio controls src="music\03 - transission.mp3" type="audio/mpeg"></audio>
 				<h2 class="musict">04 - Nights In Detroit</h2>
 				<audio controls src="music\04 - Nights in detroit.mp3" type="audio/mpeg"></audio>
